package UD5;
import lombok.Getter;
import lombok.ToString;
@Getter @ToString
public enum Cargos {
    DIRECTOR, TÉCNICO, PRESENTADOR, COLABORADOR, PTE
}